[package]
name = "tx5-signal"
version = "0.2.1-beta"
description = "holochain webrtc signal client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-signal"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
rand = { workspace = true }
sbd-e2e-crypto-client = { workspace = true }
tokio = { workspace = true, features = [ "sync" ] }
tracing = { workspace = true }
tx5-core = { workspace = true }

[dev-dependencies]
sbd-server = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tracing-subscriber = { workspace = true }
