[package]
name = "tx5"
version = "0.1.4-beta"
edition = "2021"
description = "The main holochain tx5 webrtc networking crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[features]
default = [ "backend-go-pion" ]

# use the tx5-go-pion crate as the webrtc backend
backend-go-pion = [ "tx5-connection/backend-go-pion" ]

# use the webrtc-rs crate as the webrtc backend
backend-webrtc-rs = [ "tx5-connection/backend-webrtc-rs" ]

[dependencies]
base64 = { workspace = true }
futures = { workspace = true }
influxive-otel-atomic-obs = { workspace = true }
serde = { workspace = true }
slab = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tracing = { workspace = true }
tx5-connection = { workspace = true, default-features = false }
tx5-core = { workspace = true }
url = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true }
sbd-server = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "throughput"
harness = false
